--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6"
   }
 }
