--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2020",
+    "target": "ESNext",
+    "moduleResolution": "NodeNext",
+    "module":"NodeNext",
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["esnext"],
